@@ -10,7 +10,12 @@ old data as xml. After upgrade, create a new database and import the old data
 from the xml file.
 	
 MNEMOSYNE 1.1 :
-	
+
+-More features for plugin writers. Arbitrary code can now be run after the
+ database is loaded, as well as code to intercept and modify question and
+ answer strings before they are displayed. There is a plugin directory in
+ the source distribution with examples, e.g. to activate all the categories
+ on startup, or to add the last grade to the answer text.
 -New cards can either be learned in random order or in the order that they 
  were added (configurable through the GUI).
 -Prioritise cards forgotten during the review over cards which have not yet 
